code/2_pbf_augmenter/Tests/nohup.out
Traceback (most recent call last):
  File "Maxspeed_setter.py", line 16, in <module>
    from copynodefunctions import *
  File "/home/hussein-mahfouz/32_wri_numo/4_Tool_Development/2_transform/pbf_augmenter/Tests/copynodefunctions.py", line 78
    global speedsDFpeak
    ^
SyntaxError: name 'speedsDFpeak' is parameter and global
Reading inputs...
Total number of ways in the osm: 1466845
Starting maxspeed augmenting...
Reading inputs...
Total number of ways in the osm: 1466845
Starting maxspeed augmenting...
0% completed in 8.0 minutes...
4% completed in 51.0 minutes...
9% completed in 90.0 minutes...
50% completed in 358.0 minutes...
75% completed in 492.0 minutes...
90% completed in 575.0 minutes...
99% completed in 615.0 minutes...
100% completed in 620.0 minutes!
